<resources>
    <string name="app_name">Exercise2</string>
    <string name="textView">Oi!</string>
    <string name="text_btnTrocar">Trocar usuário</string>
    <string name="text_btnCancelar">Cancelar</string>
    <string name="text_btnConfirmar">Confirmar</string>
</resources>
